--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Aba Baba Birthday</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="images.css">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
 
         <div class="cards-holder">
 
-            <a href="/sample.html" class="card">
+            <a href="/articles/article-1.html" class="card">
                 <div class="card-text">
                     <div class="card-heading">
                         माझे प्रेमळ दीर
@@ -45,7 +46,7 @@
                 </div>
             </a>
 
-            <a href="/sample.html" class="card">
+            <a href="/articles/article-2.html" class="card">
                 <div class="card-text">
 
                     <div class="card-heading">
@@ -90,6 +91,9 @@
         </div>
 
     </div>
+
+    <script src="/data.js"></script>
+    <script src="/script.js"></script>
 
 </body>
 
