--- a/index.html
+++ b/index.html
@@ -60,31 +60,325 @@
             </a>
 
 
-            <a href="/sample.html" class="card">
+            <a href="/articles/article-3.html" class="card">
                 <div class="card-text">
 
                     <div class="card-heading">
-                        सहज बोलणे, हित उपदेश
+                        आबा
                     </div>
                     <div class="card-writer">
-                        श्री. पांडुरंग तुळशीराम सोनावणे
+                        B. Z. Bhadke
                     </div>
 
                 </div>
             </a>
 
-            <a href="/sample.html" class="card">
+            <a href="/articles/article-4.html" class="card">
                 <div class="card-text">
 
                     <div class="card-heading">
-                        सहज बोलणे, हित उपदेश
+                        मना रे जनी मौन मुद्रा धरावी
                     </div>
                     <div class="card-writer">
-                        श्री. पांडुरंग तुळशीराम सोनावणे
+                        सौ. मंगला उत्तमराव खैरनार
                     </div>
 
                 </div>
             </a>
+
+            <a href="/articles/article-5.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        काका मला वाचवा
+                    </div>
+                    <div class="card-writer">
+                        सौ. लीलावती जिभाऊ पवार
+                    </div>
+
+                </div>
+            </a>
+
+            <a href="/articles/article-6.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        दाजी
+                    </div>
+                    <div class="card-writer">
+                        सुनिल वडगे
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-7.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        अरे संस्कार संस्कार
+                    </div>
+                    <div class="card-writer">
+                        सौ. नलिनी दिनकर अभोणकर
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-8.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        साखरवाडी विद्यालय
+                    </div>
+                    <div class="card-writer">
+                        अनिकेत बोन्द्रे
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-9.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        महाजन सर
+                    </div>
+                    <div class="card-writer">
+                        नजीर शेख
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-10.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        आबा मामा
+                    </div>
+                    <div class="card-writer">
+                        सौ. ज्योतिमाई
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-11.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        काका आणि पत्र
+                    </div>
+                    <div class="card-writer">
+                        श्री. कैलास महाजन
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-12.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        शिदोरी
+                    </div>
+                    <div class="card-writer">
+                        भावेश महाजन
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-13.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        आबा बाबा
+                    </div>
+                    <div class="card-writer">
+                        श्री. वैभव पवार
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-14.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        आमचे साखरवाडीचे दाजी
+                    </div>
+                    <div class="card-writer">
+                        श्री. विलास माधवराव वडगे
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-15.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        Narendra bhai
+                    </div>
+                    <div class="card-writer">
+                        Shri. Sharad Desai and Mrs. Rekha Desai
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-16.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        माझे पप्पा
+                    </div>
+                    <div class="card-writer">
+                        सौ. वैशाली जगताप
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-17.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        स्तिथप्रज्ञ
+                    </div>
+                    <div class="card-writer">
+                        सौ. लता महाजन
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-18.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        Dear Abu
+                    </div>
+                    <div class="card-writer">
+                        Yashashree
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-19.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        Papa
+                    </div>
+                    <div class="card-writer">
+                        Lopa
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-20.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        पप्पा
+                    </div>
+                    <div class="card-writer">
+                        राहुल
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-5.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        माझे पप्पा
+                    </div>
+                    <div class="card-writer">
+                        सौ. वैशाली जगताप
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-5.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        माझे पप्पा
+                    </div>
+                    <div class="card-writer">
+                        सौ. वैशाली जगताप
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-5.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        माझे पप्पा
+                    </div>
+                    <div class="card-writer">
+                        सौ. वैशाली जगताप
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-5.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        माझे पप्पा
+                    </div>
+                    <div class="card-writer">
+                        सौ. वैशाली जगताप
+                    </div>
+
+                </div>
+            </a>
+
+
+            <a href="/articles/article-5.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        माझे पप्पा
+                    </div>
+                    <div class="card-writer">
+                        सौ. वैशाली जगताप
+                    </div>
+
+                </div>
+            </a>
+
+
 
 
 
