--- a/index.html
+++ b/index.html
@@ -309,74 +309,63 @@
             </a>
 
 
-            <a href="/articles/article-5.html" class="card">
+            <a href="/articles/article-21.html" class="card">
                 <div class="card-text">
 
                     <div class="card-heading">
-                        माझे पप्पा
+                        आबाकाका
                     </div>
                     <div class="card-writer">
-                        सौ. वैशाली जगताप
+                        सौ. स्मिता महाजन
                     </div>
 
                 </div>
             </a>
 
 
-            <a href="/articles/article-5.html" class="card">
+            <a href="/articles/article-22.html" class="card">
                 <div class="card-text">
 
                     <div class="card-heading">
-                        माझे पप्पा
+                        आबा काका
                     </div>
                     <div class="card-writer">
-                        सौ. वैशाली जगताप
+                        संदीप महाजन
                     </div>
 
                 </div>
             </a>
 
 
-            <a href="/articles/article-5.html" class="card">
+            <a href="/articles/article-23.html" class="card">
                 <div class="card-text">
 
                     <div class="card-heading">
-                        माझे पप्पा
+                        आबा काका: एक आदर्श व्यक्तिमत्त्व
                     </div>
                     <div class="card-writer">
-                        सौ. वैशाली जगताप
+                        सौ. अनिता अविनाश महाजन
                     </div>
 
                 </div>
             </a>
 
 
-            <a href="/articles/article-5.html" class="card">
+            <a href="/articles/article-24.html" class="card">
                 <div class="card-text">
 
                     <div class="card-heading">
-                        माझे पप्पा
+                        आधारवड
                     </div>
                     <div class="card-writer">
-                        सौ. वैशाली जगताप
+                        श्री. अविनाश महाजन
                     </div>
 
                 </div>
             </a>
 
 
-            <a href="/articles/article-5.html" class="card">
-                <div class="card-text">
 
-                    <div class="card-heading">
-                        माझे पप्पा
-                    </div>
-                    <div class="card-writer">
-                        सौ. वैशाली जगताप
-                    </div>
-
-                </div>
-            </a>
 
 
 
