--- a/index.html
+++ b/index.html
@@ -153,6 +153,18 @@
                 </div>
             </a>
 
+            <a href="/articles/article-25.html" class="card">
+                <div class="card-text">
+
+                    <div class="card-heading">
+                        आमचे आबाकाका
+                    </div>
+                    <div class="card-writer">
+                        श्री. महेंद्र सुधाकर महाजन
+                    </div>
+
+                </div>
+            </a>
 
 
 
